cmake_minimum_required(VERSION 3.8)
project(RealtimeReconstruct3D)

set(CMAKE_CXX_STANDARD 11)

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

set(PYLON_ROOT "/opt/pylon5")
include_directories(${PYLON_ROOT}/include)
link_libraries("/opt/pylon5/lib64/libbxapi-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libgxapi-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylonbase-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylonc-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_bcon-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_camemu-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_gige-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_gtc-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_usb-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libpylonutility-5.0.9.so")
link_libraries("/opt/pylon5/lib64/libuxapi-5.0.9.so")
#link_libraries(${PYLON_ROOT}/lib64/)
link_libraries("/opt/pylon5/lib64/libbxapi.so")
link_libraries("/opt/pylon5/lib64/libFirmwareUpdate_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/libGCBase_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/libGenApi_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/libgxapi.so")
link_libraries("/opt/pylon5/lib64/liblog4cpp_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/libLog_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/libMathParser_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/libNodeMapData_gcc_v3_0_Basler_pylon_v5_0.so")

link_libraries("/opt/pylon5/lib64/libpylonbase.so")
link_libraries("/opt/pylon5/lib64/libpylonc.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_bcon.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_camemu.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_gige.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_gtc.so")
link_libraries("/opt/pylon5/lib64/libpylon_TL_usb.so")
link_libraries("/opt/pylon5/lib64/libpylonutility.so")
link_libraries("/opt/pylon5/lib64/libuxapi.so")
link_libraries("/opt/pylon5/lib64/libXmlParser_gcc_v3_0_Basler_pylon_v5_0.so")
link_libraries("/opt/pylon5/lib64/pylon-libusb-1.0.so")



set(SOURCE_FILES src/main.cpp)
include_directories("include")
add_executable(RealtimeReconstruct3D ${SOURCE_FILES})
target_link_libraries(RealtimeReconstruct3D ${OpenCV_LIBS})